[CPCN-457] Partial - fixes the top bar on mobile (#1020)
* Fix abstract syles in the Preview, TGA-97 related

* [CPCN-457] Top bar fix

--- a/assets/styles/navbar.scss
+++ b/assets/styles/navbar.scss
@@ -431,6 +431,9 @@
         .breadcrumb-sub-item {
             display: none;
         }
+        .breadcrumb-item {
+            font-size: var(--text-size--small) !important;
+        }
     }
     nav {
         display: flex;
